--- a/02-jonas-css/package.json
+++ b/02-jonas-css/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "scss": "node-sass --watch src -o src"
+    "scss": "node-sass --watch src/scss -o src/css"
   },
   "keywords": [],
   "author": "",
